# wire-on-snow

./: Cargo.toml  Dockerfile  README.md  client_key  docker-compose.yaml  iperf.sh  server_key  test.sh
.github/workflows/: test.yml
server/: Dockerfile  client_pub_key
src/: icmp.rs  main.rs  tun.rs  wireguard.rs
