[package]
name = "wire-on-snow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
blake2 = "0.10.6"
clap = { version = "4.5.14", features = ["derive"] }
libc = "0.2.170"
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "net", "ioctl"] }
pnet_packet = "0.35.0"
rand = "0.8.5"
snow = "0.9.6"
tai64 = "4.0.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
